changes to test the training routine

--- a/analyse.ipynb
+++ b/analyse.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel 'mace (Python 3.10.13)'. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details. ENOSPC: no space left on device, open '/tmp/kernel-v2-7596iAD1uvPFCwtP.json'"
+     ]
+    }
+   ],
    "source": [
     "import numpy             as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -52,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +249,7 @@
        " 'norm_rel': 6467764332858829.0}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +290,7 @@
        "(95,)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
