--- a/analyse.ipynb
+++ b/analyse.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel 'mace (Python 3.10.13)'. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details. ENOSPC: no space left on device, open '/tmp/kernel-v2-7596iAD1uvPFCwtP.json'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +73,8 @@
     "            'idv_rel_loss'     : np.load(loc+type+'/idv_rel_loss.npy')\n",
     "    }\n",
     "    return loss\n",
+    "\n",
+    "\n",
     "\n",
     "def load_model(loc, meta, epoch, sepr):\n",
     "    cuda   = False\n",
@@ -107,12 +108,13 @@
     "    ## loading torch model\n",
     "    model = load_model(loc,meta, '', sepr)\n",
     "\n",
-    "    return meta, model, trainloss, testloss, status\n"
+    "    return meta, model, trainloss, testloss, status\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,29 +231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'traindir': 'easy-mace2',\n",
-       " 'lr': 0.001,\n",
-       " 'epochs': 80,\n",
-       " 'z_dim': 10,\n",
-       " 'dt_fract': 0.2,\n",
-       " 'train_time': 9196.581718206406,\n",
-       " 'overhead': 4.375127553939819,\n",
-       " 'samples': 4638,\n",
-       " 'cutoff_abs': 1e-20,\n",
-       " 'done': 'true',\n",
-       " 'norm_mse': 0.00033119284912084483,\n",
-       " 'norm_rel': 6467764332858829.0}"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/STER/silkem/MACE/models/2023-12-01 10:16:21.595755/train/total_loss.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/STER/silkem/MACE/analyse.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# dirname = '2023-11-21 16:57:22.470699'\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# dirname = '2023-11-21 16:59:12.640608'\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# dirname = '2023-11-21 17:02:18.944748'\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m## laatste nieuwe modellen\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m dirname \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m2023-12-01 10:16:21.595755\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m meta, model, trainloss, testloss, status \u001b[39m=\u001b[39m load_all(outloc, dirname)\n\u001b[1;32m     <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m meta\n",
+      "\u001b[1;32m/STER/silkem/MACE/analyse.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m loc   \u001b[39m=\u001b[39m outloc\u001b[39m+\u001b[39mdirname\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39m## loading losses\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m trainloss \u001b[39m=\u001b[39m load_loss(loc,\u001b[39m'\u001b[39;49m\u001b[39mtrain\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m testloss  \u001b[39m=\u001b[39m load_loss(loc,\u001b[39m'\u001b[39m\u001b[39mtest\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m status \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m: np\u001b[39m.\u001b[39mload(loc\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtrain/status.npy\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[1;32m     <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m           \u001b[39m'\u001b[39m\u001b[39mtest\u001b[39m\u001b[39m'\u001b[39m : np\u001b[39m.\u001b[39mload(loc\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtest/status.npy\u001b[39m\u001b[39m'\u001b[39m)}\n",
+      "\u001b[1;32m/STER/silkem/MACE/analyse.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload_loss\u001b[39m(loc, \u001b[39mtype\u001b[39m):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     loss \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mtotal_loss\u001b[39m\u001b[39m'\u001b[39m       : np\u001b[39m.\u001b[39;49mload(loc\u001b[39m+\u001b[39;49m\u001b[39mtype\u001b[39;49m\u001b[39m+\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m/total_loss.npy\u001b[39;49m\u001b[39m'\u001b[39;49m),\n\u001b[1;32m      <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mtotal_mse_loss\u001b[39m\u001b[39m'\u001b[39m   : np\u001b[39m.\u001b[39mload(loc\u001b[39m+\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/total_mse_loss.npy\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[1;32m      <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mtotal_rel_loss\u001b[39m\u001b[39m'\u001b[39m   : np\u001b[39m.\u001b[39mload(loc\u001b[39m+\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/total_rel_loss.npy\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[1;32m      <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m             \u001b[39m'\u001b[39m\u001b[39midv_mse_loss\u001b[39m\u001b[39m'\u001b[39m     : np\u001b[39m.\u001b[39mload(loc\u001b[39m+\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/idv_mse_loss.npy\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[1;32m      <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m             \u001b[39m'\u001b[39m\u001b[39midv_rel_loss\u001b[39m\u001b[39m'\u001b[39m     : np\u001b[39m.\u001b[39mload(loc\u001b[39m+\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/idv_rel_loss.npy\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     }\n\u001b[1;32m      <a href='vscode-notebook-cell:/STER/silkem/MACE/analyse.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m loss\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.10/site-packages/numpy/lib/npyio.py:427\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    425\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m    426\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 427\u001b[0m     fid \u001b[39m=\u001b[39m stack\u001b[39m.\u001b[39menter_context(\u001b[39mopen\u001b[39;49m(os_fspath(file), \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[1;32m    428\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    430\u001b[0m \u001b[39m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/STER/silkem/MACE/models/2023-12-01 10:16:21.595755/train/total_loss.npy'"
+     ]
     }
    ],
    "source": [
@@ -272,10 +267,13 @@
     "# dirname = '2023-11-28 15:36:34.704840'\n",
     "\n",
     "## met juiste tijdschaling\n",
-    "dirname = '2023-11-29 17:52:54.611755'\n",
+    "# dirname = '2023-11-29 17:52:54.611755'\n",
+    "\n",
+    "## laatste nieuwe modellen\n",
+    "dirname = '2023-12-01 10:16:21.595755'\n",
     "\n",
     "\n",
-    "meta, model, trainloss, testloss, status = load_all(outloc, dirname)\n",
+    "meta, model, trainloss, testloss, status = load_all_new(outloc, dirname)\n",
     "meta"
    ]
   },
