--- a/train2.0_dev.ipynb
+++ b/train2.0_dev.ipynb
@@ -175,58 +175,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mod = ds.CSEmod(inputdirs[18241])\n",
+    "dt,n,p = mod.split_in_0D()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/STER/silkem/MACE/src/mace/dataset.py:289: UserWarning: loadtxt: input contained no data: \"/lhome/silkem/CHEM/Output_nov2022/20210527_gridC_Mdot2e-5_v20_T_eps/models/model_2023-01-10h09-59-15/csphyspar_smooth.out\"\n",
-      "  arr = np.loadtxt(self.path+phys_path, skiprows=4, usecols=(0,1,2,3,4))\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'/lhome/silkem/CHEM/Output_nov2022/20210527_gridC_Mdot2e-5_v20_T_eps/models/model_2023-01-10h09-59-15/'"
+       "(80, 4)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mod = ds.CSEmod(inputdirs[18241])\n",
-    "mod.path"
+    "p.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(135, 135)"
+       "(135, 81)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mod1 = ds.CSEmod(inputdirs[17982])\n",
-    "mod2 = ds.CSEmod(inputdirs[9830])\n",
+    "mod2 = ds.CSEmod(inputdirs[18241])\n",
     "len(mod1), len(mod2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,22 +237,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((134,), (134, 468), (134, 4), (134,), (134, 468), (134, 4))"
+       "((134,), (134, 468), (134, 4), (80,), (80, 468), (80, 4))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dt1.shape, n1.shape, p1.shape, dt2.shape, n2.shape, p2.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(214,)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h = np.concatenate((dt1, dt2), axis=0)\n",
+    "h.shape"
    ]
   },
   {
