--- a/train2.0_dev.ipynb
+++ b/train2.0_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,10 @@
     "## import own functions\n",
     "sys.path.insert(1, '/STER/silkem/MACE/src/mace')\n",
     "import src.mace.autoencoder  as ae\n",
-    "import src.mace.dataset      as ds\n",
-    "import src.mace.train        as tr\n",
+    "import src.mace.CSE_0D.dataset      as ds\n",
+    "import src.mace.CSE_0D.train        as tr\n",
     "import src.mace.neuralODE    as nODE\n",
-    "from src.mace.loss           import Loss\n",
+    "from src.mace.CSE_0D.loss           import Loss\n",
     "from src.mace.plotting  import plot_loss\n",
     "\n",
     "\n",
@@ -38,11 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "inputdirs = np.loadtxt('data/paths_data_C.txt', dtype=str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieving the min & max values of the dataset"
    ]
   },
   {
@@ -174,8 +181,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the dataset class"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,27 +199,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(80, 4)"
+       "((80,), (81, 468), (80, 4))"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p.shape"
+    "dt.shape, n.shape, p.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(81, 468)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = n.reshape(81,468)\n",
+    "n.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((80, 468), (80, 468))"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n[:-1].shape, n[1:].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +269,7 @@
        "(135, 81)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,6 +404,316 @@
    ],
    "source": [
     "inputdirs[random_numbers]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset:\n",
+      "------------------------------\n",
+      "total # of samples: 100\n",
+      "# training samples: 70\n",
+      "#  testing samples: 30\n",
+      "             ratio: 0.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Set up PyTorch \n",
+    "cuda   = False\n",
+    "DEVICE = torch.device(\"cuda\" if cuda else \"cpu\")\n",
+    "\n",
+    "kwargs = {'num_workers': 1, 'pin_memory': True} \n",
+    "\n",
+    "lr = 1.e-3\n",
+    "tot_epochs = 10\n",
+    "nb_epochs  = 10\n",
+    "ini_epochs = 2\n",
+    "losstype = 'mse_evo_rel'\n",
+    "z_dim = 10\n",
+    "dt_fract = 0.2\n",
+    "batch_size = 1\n",
+    "nb_samples = 100\n",
+    "n_dim = 468\n",
+    "\n",
+    "\n",
+    "train, test, data_loader, test_loader = ds.get_data(dt_fract=dt_fract,nb_samples=nb_samples, batch_size=batch_size, kwargs=kwargs)\n",
+    "\n",
+    "model = nODE.Solver(p_dim=4,z_dim = z_dim, n_dim=n_dim, DEVICE = DEVICE)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_loader_iter = iter(data_loader)\n",
+    "next_obj = next(data_loader_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([[[0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 1.0407],\n",
+       "          [0.5638, 0.3402, 0.2543,  ..., 0.0000, 0.5067, 1.0407],\n",
+       "          [0.5855, 0.3432, 0.2577,  ..., 0.0000, 0.5245, 1.0407],\n",
+       "          ...,\n",
+       "          [0.8711, 0.7400, 0.3227,  ..., 0.0000, 0.8828, 1.0406],\n",
+       "          [0.8711, 0.7432, 0.3227,  ..., 0.0000, 0.8828, 1.0406],\n",
+       "          [0.8712, 0.7463, 0.3227,  ..., 0.0000, 0.8828, 1.0406]]],\n",
+       "        dtype=torch.float64),\n",
+       " tensor([[[0.8058, 0.8613, 0.8820, 0.7052],\n",
+       "          [0.8007, 0.8514, 0.8890, 0.7014],\n",
+       "          [0.7956, 0.8414, 0.8955, 0.6975],\n",
+       "          [0.7905, 0.8315, 0.9016, 0.6936],\n",
+       "          [0.7854, 0.8216, 0.9074, 0.6898],\n",
+       "          [0.7803, 0.8117, 0.9128, 0.6859],\n",
+       "          [0.7753, 0.8018, 0.9179, 0.6820],\n",
+       "          [0.7701, 0.7918, 0.9226, 0.6782],\n",
+       "          [0.7651, 0.7819, 0.9271, 0.6743],\n",
+       "          [0.7600, 0.7720, 0.9313, 0.6704],\n",
+       "          [0.7549, 0.7620, 0.9353, 0.6666],\n",
+       "          [0.7498, 0.7522, 0.9390, 0.6627],\n",
+       "          [0.7447, 0.7422, 0.9426, 0.6589],\n",
+       "          [0.7396, 0.7323, 0.9459, 0.6550],\n",
+       "          [0.7345, 0.7224, 0.9490, 0.6511],\n",
+       "          [0.7294, 0.7125, 0.9519, 0.6473],\n",
+       "          [0.7243, 0.7025, 0.9547, 0.6434],\n",
+       "          [0.7192, 0.6926, 0.9573, 0.6396],\n",
+       "          [0.7141, 0.6827, 0.9597, 0.6357],\n",
+       "          [0.7090, 0.6728, 0.9621, 0.6318],\n",
+       "          [0.7039, 0.6628, 0.9642, 0.6279],\n",
+       "          [0.6989, 0.6529, 0.9663, 0.6241],\n",
+       "          [0.6938, 0.6430, 0.9682, 0.6202],\n",
+       "          [0.6887, 0.6330, 0.9701, 0.6164],\n",
+       "          [0.6836, 0.6232, 0.9718, 0.6125],\n",
+       "          [0.6785, 0.6132, 0.9734, 0.6086],\n",
+       "          [0.6734, 0.6033, 0.9749, 0.6048],\n",
+       "          [0.6683, 0.5934, 0.9764, 0.6009],\n",
+       "          [0.6632, 0.5834, 0.9777, 0.5970],\n",
+       "          [0.6581, 0.5735, 0.9790, 0.5932],\n",
+       "          [0.6530, 0.5636, 0.9802, 0.5893],\n",
+       "          [0.6480, 0.5537, 0.9814, 0.5854],\n",
+       "          [0.6429, 0.5438, 0.9824, 0.5816],\n",
+       "          [0.6378, 0.5338, 0.9834, 0.5777],\n",
+       "          [0.6327, 0.5239, 0.9844, 0.5739],\n",
+       "          [0.6276, 0.5140, 0.9853, 0.5700],\n",
+       "          [0.6225, 0.5041, 0.9862, 0.5661],\n",
+       "          [0.6174, 0.4941, 0.9870, 0.5623],\n",
+       "          [0.6123, 0.4842, 0.9877, 0.5584],\n",
+       "          [0.6072, 0.4744, 0.9885, 0.5545],\n",
+       "          [0.6021, 0.4644, 0.9891, 0.5507],\n",
+       "          [0.5970, 0.4543, 0.9898, 0.5468],\n",
+       "          [0.5919, 0.4444, 0.9904, 0.5429],\n",
+       "          [0.5869, 0.4346, 0.9909, 0.5391],\n",
+       "          [0.5818, 0.4247, 0.9915, 0.5352],\n",
+       "          [0.5767, 0.4148, 0.9920, 0.5314],\n",
+       "          [0.5716, 0.4048, 0.9925, 0.5275],\n",
+       "          [0.5665, 0.3949, 0.9929, 0.5236],\n",
+       "          [0.5614, 0.3850, 0.9933, 0.5198],\n",
+       "          [0.5563, 0.3751, 0.9937, 0.5159],\n",
+       "          [0.5512, 0.3651, 0.9941, 0.5121],\n",
+       "          [0.5461, 0.3552, 0.9945, 0.5082],\n",
+       "          [0.5410, 0.3453, 0.9948, 0.5043],\n",
+       "          [0.5359, 0.3354, 0.9951, 0.5005],\n",
+       "          [0.5308, 0.3254, 0.9954, 0.4966],\n",
+       "          [0.5258, 0.3155, 0.9957, 0.4927],\n",
+       "          [0.5207, 0.3056, 0.9960, 0.4888],\n",
+       "          [0.5156, 0.2957, 0.9962, 0.4850],\n",
+       "          [0.5105, 0.2857, 0.9964, 0.4811],\n",
+       "          [0.5054, 0.2758, 0.9967, 0.4773],\n",
+       "          [0.5003, 0.2659, 0.9969, 0.4734],\n",
+       "          [0.4952, 0.2560, 0.9971, 0.4695],\n",
+       "          [0.4901, 0.2460, 0.9972, 0.4657],\n",
+       "          [0.4850, 0.2361, 0.9974, 0.4618],\n",
+       "          [0.4799, 0.2262, 0.9976, 0.4580],\n",
+       "          [0.4748, 0.2163, 0.9977, 0.4541],\n",
+       "          [0.4698, 0.2064, 0.9979, 0.4502],\n",
+       "          [0.4647, 0.1965, 0.9980, 0.4464],\n",
+       "          [0.4596, 0.1865, 0.9981, 0.4425],\n",
+       "          [0.4545, 0.1766, 0.9982, 0.4386],\n",
+       "          [0.4494, 0.1666, 0.9983, 0.4348],\n",
+       "          [0.4443, 0.1568, 0.9984, 0.4309],\n",
+       "          [0.4392, 0.1468, 0.9985, 0.4270],\n",
+       "          [0.4341, 0.1369, 0.9986, 0.4232],\n",
+       "          [0.4290, 0.1269, 0.9987, 0.4193],\n",
+       "          [0.4239, 0.1170, 0.9988, 0.4154],\n",
+       "          [0.4188, 0.1071, 0.9989, 0.4116],\n",
+       "          [0.4138, 0.0972, 0.9989, 0.4077],\n",
+       "          [0.4087, 0.0873, 0.9990, 0.4039],\n",
+       "          [0.4036, 0.0774, 0.9991, 0.4000],\n",
+       "          [0.3985, 0.0674, 0.9991, 0.3961],\n",
+       "          [0.3934, 0.0575, 0.9992, 0.3923],\n",
+       "          [0.3883, 0.0476, 0.9992, 0.3884],\n",
+       "          [0.3832, 0.0376, 0.9993, 0.3845],\n",
+       "          [0.3781, 0.0278, 0.9993, 0.3807],\n",
+       "          [0.3730, 0.0177, 0.9994, 0.3768],\n",
+       "          [0.3679, 0.0079, 0.9994, 0.3730],\n",
+       "          [0.3628, 0.0000, 0.9995, 0.3691],\n",
+       "          [0.3577, 0.0000, 0.9995, 0.3652],\n",
+       "          [0.3527, 0.0000, 0.9995, 0.3614],\n",
+       "          [0.3476, 0.0000, 0.9996, 0.3575],\n",
+       "          [0.3425, 0.0000, 0.9996, 0.3536],\n",
+       "          [0.3374, 0.0000, 0.9996, 0.3498],\n",
+       "          [0.3323, 0.0000, 0.9996, 0.3459],\n",
+       "          [0.3272, 0.0000, 0.9997, 0.3420],\n",
+       "          [0.3221, 0.0000, 0.9997, 0.3382],\n",
+       "          [0.3170, 0.0000, 0.9997, 0.3343],\n",
+       "          [0.3119, 0.0000, 0.9997, 0.3305],\n",
+       "          [0.3068, 0.0000, 0.9997, 0.3266],\n",
+       "          [0.3017, 0.0000, 0.9998, 0.3227],\n",
+       "          [0.2966, 0.0000, 0.9998, 0.3189],\n",
+       "          [0.2916, 0.0000, 0.9998, 0.3150],\n",
+       "          [0.2865, 0.0000, 0.9998, 0.3111],\n",
+       "          [0.2814, 0.0000, 0.9998, 0.3073],\n",
+       "          [0.2763, 0.0000, 0.9998, 0.3034],\n",
+       "          [0.2712, 0.0000, 0.9998, 0.2995],\n",
+       "          [0.2661, 0.0000, 0.9999, 0.2957],\n",
+       "          [0.2610, 0.0000, 0.9999, 0.2918],\n",
+       "          [0.2559, 0.0000, 0.9999, 0.2880],\n",
+       "          [0.2508, 0.0000, 0.9999, 0.2841],\n",
+       "          [0.2457, 0.0000, 0.9999, 0.2802],\n",
+       "          [0.2406, 0.0000, 0.9999, 0.2764],\n",
+       "          [0.2356, 0.0000, 0.9999, 0.2725],\n",
+       "          [0.2305, 0.0000, 0.9999, 0.2686],\n",
+       "          [0.2254, 0.0000, 0.9999, 0.2648],\n",
+       "          [0.2203, 0.0000, 0.9999, 0.2609],\n",
+       "          [0.2152, 0.0000, 0.9999, 0.2570],\n",
+       "          [0.2101, 0.0000, 0.9999, 0.2532],\n",
+       "          [0.2050, 0.0000, 0.9999, 0.2493],\n",
+       "          [0.1999, 0.0000, 0.9999, 0.2455],\n",
+       "          [0.1948, 0.0000, 0.9999, 0.2416],\n",
+       "          [0.1897, 0.0000, 0.9999, 0.2377],\n",
+       "          [0.1846, 0.0000, 1.0000, 0.2338],\n",
+       "          [0.1796, 0.0000, 1.0000, 0.2300],\n",
+       "          [0.1745, 0.0000, 1.0000, 0.2262],\n",
+       "          [0.1694, 0.0000, 1.0000, 0.2223],\n",
+       "          [0.1643, 0.0000, 1.0000, 0.2184],\n",
+       "          [0.1592, 0.0000, 1.0000, 0.2146],\n",
+       "          [0.1541, 0.0000, 1.0000, 0.2107],\n",
+       "          [0.1490, 0.0000, 1.0000, 0.2068],\n",
+       "          [0.1439, 0.0000, 1.0000, 0.2030],\n",
+       "          [0.1388, 0.0000, 1.0000, 0.1991],\n",
+       "          [0.1337, 0.0000, 1.0000, 0.1952],\n",
+       "          [0.1286, 0.0000, 1.0000, 0.1914]]], dtype=torch.float64),\n",
+       " tensor([[1.8925e-06, 1.9976e-06, 2.1553e-06, 2.3131e-06, 2.4970e-06, 2.6548e-06,\n",
+       "          2.8387e-06, 3.0490e-06, 3.2593e-06, 3.4959e-06, 3.7587e-06, 4.0216e-06,\n",
+       "          4.3107e-06, 4.5998e-06, 4.9415e-06, 5.3095e-06, 5.6775e-06, 6.0718e-06,\n",
+       "          6.5186e-06, 6.9917e-06, 7.4911e-06, 8.0168e-06, 8.5951e-06, 9.1996e-06,\n",
+       "          9.8567e-06, 1.0593e-05, 1.1329e-05, 1.2117e-05, 1.3011e-05, 1.3931e-05,\n",
+       "          1.4930e-05, 1.6007e-05, 1.7138e-05, 1.8347e-05, 1.9713e-05, 2.1028e-05,\n",
+       "          2.2605e-05, 2.4182e-05, 2.6022e-05, 2.7862e-05, 2.9702e-05, 3.2067e-05,\n",
+       "          3.4170e-05, 3.6536e-05, 3.9427e-05, 4.2055e-05, 4.4947e-05, 4.8364e-05,\n",
+       "          5.1781e-05, 5.5461e-05, 5.9403e-05, 6.3872e-05, 6.8077e-05, 7.3334e-05,\n",
+       "          7.8328e-05, 8.3848e-05, 9.0156e-05, 9.6202e-05, 1.0330e-04, 1.1092e-04,\n",
+       "          1.1854e-04, 1.2695e-04, 1.3615e-04, 1.4614e-04, 1.5639e-04, 1.6743e-04,\n",
+       "          1.7874e-04, 1.9188e-04, 2.0765e-04, 2.2079e-04, 2.3656e-04, 2.5233e-04,\n",
+       "          2.7336e-04, 2.9176e-04, 3.1016e-04, 3.3382e-04, 3.6010e-04, 3.8376e-04,\n",
+       "          4.1004e-04, 4.4158e-04, 4.7312e-04, 5.0467e-04, 5.4146e-04, 5.8089e-04,\n",
+       "          6.2295e-04, 6.6763e-04, 7.1494e-04, 7.6488e-04, 8.2008e-04, 8.8054e-04,\n",
+       "          9.4099e-04, 1.0093e-03, 1.0829e-03, 1.1592e-03, 1.2406e-03, 1.3326e-03,\n",
+       "          1.4246e-03, 1.5298e-03, 1.6375e-03, 1.7532e-03, 1.8925e-03, 1.9976e-03,\n",
+       "          2.1553e-03, 2.3131e-03, 2.4970e-03, 2.6548e-03, 2.8387e-03, 3.0490e-03,\n",
+       "          3.2593e-03, 3.4959e-03, 3.7587e-03, 4.0216e-03, 4.3107e-03, 4.5998e-03,\n",
+       "          4.9415e-03, 5.3095e-03, 5.6775e-03, 6.0718e-03, 6.5186e-03, 6.9917e-03,\n",
+       "          7.4911e-03, 8.0168e-03, 8.5951e-03, 9.1996e-03, 9.8567e-03, 1.0593e-02,\n",
+       "          1.1329e-02, 1.2117e-02, 1.3011e-02, 1.3931e-02, 1.4930e-02, 1.6007e-02,\n",
+       "          1.7138e-02, 1.8347e-02]], dtype=torch.float64)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next_obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model:         \n",
+      "learning rate: 0.001\n",
+      "\n",
+      ">>> Training model...\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Epoch 1 complete! \tAverage loss train:  nan \tAverage loss test:  nan\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Epoch 2 complete! \tAverage loss train:  nan \tAverage loss test:  nan\n",
+      "\n",
+      " \tDONE!\n"
+     ]
+    }
+   ],
+   "source": [
+    "norm = {'mse' : 1,\n",
+    "        'rel' : 1,\n",
+    "        'evo' : 1}\n",
+    "\n",
+    "fract = {'mse' : 1, \n",
+    "         'rel' : 1,\n",
+    "         'evo' : 1}\n",
+    "\n",
+    "\n",
+    "## Make loss objects\n",
+    "trainloss = Loss(norm, fract)\n",
+    "testloss  = Loss(norm, fract)\n",
+    "\n",
+    "trainloss.set_losstype(losstype)\n",
+    "testloss.set_losstype(losstype)\n",
+    "\n",
+    "import warnings\n",
+    "\n",
+    "with warnings.catch_warnings():\n",
+    "    warnings.filterwarnings(\"error\", category=RuntimeWarning)\n",
+    "    try:\n",
+    "        opt = tr.train(model, lr, data_loader, test_loader, None, end_epochs = ini_epochs, DEVICE= DEVICE, trainloss=trainloss, testloss=testloss, plot = False, log = True, show = True)\n",
+    "    except UserWarning as e:\n",
+    "        print(\"Caught:\",e)\n",
+    "        xxx\n",
+    "\n",
+    "\n",
+    "# trainloss.change_norm({'mse' :np.mean(trainloss.get_loss('mse')), # type: ignore\n",
+    "#                        'rel' :np.mean(trainloss.get_loss('rel')), # type: ignore\n",
+    "#                        'evo' :np.mean(trainloss.get_loss('evo'))})   # type: ignore\n",
+    "# testloss.change_norm({'mse' :np.mean(testloss.get_loss('mse')), # type: ignore\n",
+    "#                       'rel' :np.mean(testloss.get_loss('rel')), # type: ignore\n",
+    "#                       'evo' :np.mean(testloss.get_loss('evo'))}) # type: ignore\n",
+    "\n",
+    "# tr.train(model, lr, data_loader, test_loader,None, end_epochs = nb_epochs, DEVICE= DEVICE, trainloss=trainloss, testloss=testloss, start_epochs=ini_epochs, plot = False, log = True, show = True)\n",
+    "\n"
    ]
   }
  ],
