First training with CSE_0D works, need to be able to test the evolution still

--- a/train_dev.ipynb
+++ b/train_dev.ipynb
@@ -28,7 +28,7 @@
     "import src.mace.chempy_0D.train           as tr\n",
     "import src.mace.neuralODE       as nODE\n",
     "from src.mace.chempy_0D.loss              import Loss\n",
-    "from src.mace.plotting          import plot_loss\n",
+    "from chempy_0D.plotting          import plot_loss\n",
     "\n",
     "\n",
     "%reload_ext autoreload\n",
