Prepping for running models during holidays

--- a/latentdyn/latent_dynamics.ipynb
+++ b/latentdyn/latent_dynamics.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "62f4cd04-e577-4473-b2a0-6b7e7871f0cf",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "efea529b",
    "metadata": {},
    "outputs": [],
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "b85ddf8d",
    "metadata": {},
    "outputs": [
@@ -951,6 +951,38 @@
     "    print(n)\n",
     "    latent_dyn[n] = np.load(loc+file)\n",
     "    n_latents.append(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b3488127",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 0.969\n",
+      "3 0.258\n",
+      "4 0.296\n",
+      "5 0.269\n",
+      "8 0.221\n",
+      "10 0.175\n",
+      "12 0.146\n",
+      "16 0.117\n",
+      "20 0.09\n",
+      "25 0.078\n",
+      "32 0.062\n",
+      "48 0.043\n",
+      "64 0.033\n",
+      "128 0.017\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in latent_dyn.keys():\n",
+    "    print(key, len(latent_dyn[key])/1000)"
    ]
   },
   {
