found issues for training: unexisting model

--- a/train2.0_dev.ipynb
+++ b/train2.0_dev.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -258,13 +258,37 @@
        "18314"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(inputdirs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "227 /lhome/silkem/CHEM/Output_nov2022/20211014_gridC_Mdot1e-6_v12-5_T_eps/models/model_2022-12-23h11-57-06/csfrac_smooth.out\r"
+     ]
+    }
+   ],
+   "source": [
+    "for i, path in enumerate(inputdirs):\n",
+    "    print(i, path, end='\\r')\n",
+    "    try:\n",
+    "        mod = ds.CSEmod(path)\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        print(\"does not exist\",i, path)\n",
+    "        continue\n"
    ]
   },
   {
@@ -1659,6 +1683,20 @@
    "source": [
     "n_or"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
