Changing the naming of output directories, unique ID via slurm

--- a/train2.0_dev.ipynb
+++ b/train2.0_dev.ipynb
@@ -269,26 +269,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/lhome/silkem/CHEM/Output_nov2022/20210527_gridC_Mdot2e-5_v20_T_eps/models/model_2023-01-10h12-19-34/csfrac_smooth.out'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputdirs[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "227 /lhome/silkem/CHEM/Output_nov2022/20211014_gridC_Mdot1e-6_v12-5_T_eps/models/model_2022-12-23h11-57-06/csfrac_smooth.out\r"
+      "18313 /lhome/silkem/CHEM/Output_nov2022/20210527_gridC_Mdot2e-5_v20_T_eps/models/model_2023-01-10h12-19-34/csfrac_smooth.outut\r"
      ]
     }
    ],
    "source": [
     "for i, path in enumerate(inputdirs):\n",
     "    print(i, path, end='\\r')\n",
-    "    try:\n",
-    "        mod = ds.CSEmod(path)\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        print(\"does not exist\",i, path)\n",
-    "        continue\n"
+    "    # try:\n",
+    "    mod = ds.CSEmod(path)\n",
+    "    # except Exception as e:\n",
+    "    #     print(e)\n",
+    "    #     print(\"does not exist\",i, path)\n"
    ]
   },
   {
