Saving test losses of trained models

--- a/file_writer.ipynb
+++ b/file_writer.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,16 +58,19 @@
     "        file.write(f\"\"\"#!/bin/bash\n",
     "#SBATCH --job-name='mace-xmas-training-{x}'\n",
     "#SBATCH --account=silkem\n",
-    "#SBATCH --time=13-00:00:00\n",
-    "#SBATCH --output=./mace_logs/log/xmas{x}.log\n",
-    "#SBATCH --error=./mace_logs/error/xmas{x}.log\n",
-    "#SBATCH --ntasks=1\n",
-    "#SBATCH --cpus-per-task=1\n",
+    "#SBATCH --time=4-00:00:00\n",
+    "#SBATCH --output=./mace_logs/out/xmas{x}_%A.out\n",
+    "#SBATCH --error=./mace_logs/error/xmas{x}_%A.err\n",
+    "#SBATCH --nodes=1\n",
+    "#SBATCH --ntasks-per-node=1\n",
+    "#SBATCH --cpus-per-task=2\n",
+    "#SBATCH --mem-per-cpu=16G\n",
     "#SBATCH --hint=multithread\n",
-    "#SBATCH --mem=16G\n",
     "#SBATCH --partition=long\n",
+    "#SBATCH --array=1-150\n",
     "\n",
-    "python /STER/silkem/MACE/src/mace/CSE_0D/mace_training_routine.py in_file_{x}\n",
+    "\n",
+    "python /STER/silkem/MACE/src/mace/CSE_0D/mace_training_routine.py xmas2023/in_file_{x}\n",
     "\"\"\"\n",
     ")"
    ]
@@ -105,12 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "i=1\n",
-    "while i < 150:\n",
+    "while i <= 150:\n",
     "    write_random_input_file(i)\n",
     "    write_job_script(i)\n",
     "    i += 1"
@@ -120,58 +123,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## file inlezen test"
+    "### random testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/STER/silkem/MACE/input/input_mse_evo_idn2.txt\n",
-      "[[], ['##', 'input', 'model'], [], ['lr', '=', '1.e-4'], ['tot_epochs', '=', '100'], ['nb_epochs', '=', '51'], ['losstype', '=', 'mse_idn_evo'], ['z_dim', '=', '16'], ['nb_samples', '=', '10000'], [], ['##', 'loss', 'fractions'], [], ['mse1', '=', '1.e4'], ['rel1', '=', '0'], ['evo1', '=', '1'], ['idn1', '=', '1.e2'], [], ['mse2', '=', '1'], ['rel2', '=', '0'], ['evo2', '=', '1'], ['idn2', '=', '1'], [], [], [], ['Name', '=', '2023-12-22', '12:00:02.510371']]\n",
-      "{'##': 'fractions', 'lr': '1.e-4', 'tot_epochs': '100', 'nb_epochs': '51', 'losstype': 'mse_idn_evo', 'z_dim': '16', 'nb_samples': '10000', 'mse1': '1.e4', 'rel1': '0', 'evo1': '1', 'idn1': '1.e2', 'mse2': '1', 'rel2': '0', 'evo2': '1', 'idn2': '1', 'Name': '2023-12-22'}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "79"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "arg = 'input_mse_evo_idn2'\n",
+    "import random\n",
+    "random.randint(1, 150)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2024_1_3'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime             as dt\n",
+    "str(dt.datetime.now().day), str(dt.datetime.now().month), str(dt.datetime.now().year)\n",
     "\n",
-    "inFile = '/STER/silkem/MACE/input/'+arg+'.txt'\n",
     "\n",
-    "# with open(inFile, 'a') as file:\n",
-    "#     file.write('\\nName = '+str(name)+'\\n')\n",
-    "print(inFile)\n",
-    "with open(inFile,'r') as f:\n",
-    "    file = f.readlines()\n",
-    "    lines = []\n",
-    "    for line in file:\n",
-    "        lines.append(line.split())\n",
-    "print(lines)\n",
-    "\n",
-    "inputfile = {}\n",
-    "for i in range(len(lines)):\n",
-    "    if not len(lines[i]) == 0 and len(lines[i]) > 2:\n",
-    "        # print(test[i])\n",
-    "        inputfile[lines[i][0]] = lines[i][2]\n",
-    "    elif not len(lines[i]) == 0 and len(lines[i]) <= 2:\n",
-    "        print('You forgot to give an input for '+lines[i][0])\n",
-    "\n",
-    "print(inputfile)\n",
-    "## SET PARAMETERS\n",
-    "lr          = float(inputfile['lr'])\n",
-    "tot_epochs  = int(inputfile['tot_epochs'])\n",
-    "nb_epochs   = int(inputfile['nb_epochs'])\n",
-    "ini_epochs  = 5\n",
-    "losstype    = inputfile['losstype']\n",
-    "z_dim       = int(inputfile['z_dim'])\n",
-    "batch_size  = 1\n",
-    "nb_samples  = int(inputfile['nb_samples'])\n",
-    "n_dim       = 468"
+    "now = dt.datetime.now()\n",
+    "name = f\"{now.year}_{now.month}_{now.day}\"\n",
+    "name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20240103_150457'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.datetime.now().strftime(\"%Y%m%d\")+'_'+dt.datetime.now().strftime(\"%H%M%S\")"
    ]
   }
  ],
