Script ready for writing input files for grid

--- a/file_writer.ipynb
+++ b/file_writer.ipynb
@@ -2,12 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random inputs for mace"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def uniform(max, min, round):\n",
     "    return np.round((max - min) * np.random.rand() + min,round)\n",
     "\n",
@@ -77,15 +91,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_job_script(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [],
@@ -123,74 +128,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### random testing"
+    "### Inputs grid mace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "79"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n"
+     ]
     }
    ],
    "source": [
-    "import random\n",
-    "random.randint(1, 150)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2024_1_3'"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import datetime             as dt\n",
-    "str(dt.datetime.now().day), str(dt.datetime.now().month), str(dt.datetime.now().year)\n",
     "\n",
     "\n",
-    "now = dt.datetime.now()\n",
-    "name = f\"{now.year}_{now.month}_{now.day}\"\n",
-    "name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'20240103_150457'"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dt.datetime.now().strftime(\"%Y%m%d\")+'_'+dt.datetime.now().strftime(\"%H%M%S\")"
+    "lrs      = [1.e-6,1.e-5,1.e-4,1.e-3]\n",
+    "z_dims   = [8,16,32]\n",
+    "nb_evols = [11,22,33,44]\n",
+    "\n",
+    "x=1\n",
+    "\n",
+    "for lr in lrs:\n",
+    "    for z_dim in z_dims:\n",
+    "        for nb_evol in nb_evols:\n",
+    "            with open(f\"/STER/silkem/MACE/input/grid/in_grid_{x}.txt\", \"w\") as file:\n",
+    "                file.write(f\"\"\"\n",
+    "## input model\n",
+    "\n",
+    "lr          = {lr}\n",
+    "ini_epochs  = 5\n",
+    "tot_epochs  = 100\n",
+    "nb_epochs   = 51\n",
+    "losstype    = mse_idn\n",
+    "z_dim       = {z_dim}\n",
+    "nb_samples  = 10000\n",
+    "nb_evol     = {nb_evol}\n",
+    "\n",
+    "nb_hidden = 1\n",
+    "ae_type = simple\n",
+    "\n",
+    "## loss fractions\n",
+    "\n",
+    "mse1 = 1\n",
+    "rel1 = 0 \n",
+    "evo1 = 0\n",
+    "idn1 = 1\n",
+    "\n",
+    "mse2 = 100\n",
+    "rel2 = 0\n",
+    "evo2 = 0\n",
+    "idn2 = 100\n",
+    "\"\"\"\n",
+    ")\n",
+    "                print(x)\n",
+    "                x+=1"
    ]
   }
  ],
