Running grid during holiday

--- a/file_writer.ipynb
+++ b/file_writer.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -163,54 +163,34 @@
       "21\n",
       "22\n",
       "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n"
+      "24\n"
      ]
     }
    ],
    "source": [
+    "with open(f\"/STER/silkem/MACE/input/grid/overview.txt\", \"w\") as file:\n",
+    "    file.write(f\"\"\"{'index'.ljust(10)} {'lr'.ljust(10)} {'z_dim'.ljust(10)} {'nb_evol'.ljust(10)}\n",
+    "            \"\"\")\n",
     "\n",
-    "\n",
-    "lrs      = [1.e-6,1.e-5,1.e-4,1.e-3]\n",
+    "lrs      = [1.e-5,1.e-4]\n",
     "z_dims   = [8,16,32]\n",
     "nb_evols = [11,22,33,44]\n",
     "\n",
     "x=1\n",
-    "\n",
-    "for lr in lrs:\n",
-    "    for z_dim in z_dims:\n",
-    "        for nb_evol in nb_evols:\n",
-    "            with open(f\"/STER/silkem/MACE/input/grid/in_grid_{x}.txt\", \"w\") as file:\n",
+    "for nb_evol in nb_evols:\n",
+    "    for lr in lrs:\n",
+    "        for z_dim in z_dims:\n",
+    "        \n",
+    "            print(x)\n",
+    "            ## WRITE INPUT FILE\n",
+    "            with open(f\"/STER/silkem/MACE/input/grid/grid_{x}.in\", \"w\") as file:\n",
     "                file.write(f\"\"\"\n",
     "## input model\n",
     "\n",
     "lr          = {lr}\n",
     "ini_epochs  = 5\n",
-    "tot_epochs  = 100\n",
-    "nb_epochs   = 51\n",
+    "tot_epochs  = 250\n",
+    "nb_epochs   = 151\n",
     "losstype    = mse_idn\n",
     "z_dim       = {z_dim}\n",
     "nb_samples  = 10000\n",
@@ -232,8 +212,11 @@
     "idn2 = 100\n",
     "\"\"\"\n",
     ")\n",
-    "                print(x)\n",
-    "                x+=1"
+    "                # Write overview file\n",
+    "            with open(f\"/STER/silkem/MACE/input/grid/overview.txt\", \"a\") as file:\n",
+    "                file.write(f\"\"\"{str(x).ljust(10)} {str(nb_evol).ljust(10)} {str(lr).ljust(10)} {str(z_dim).ljust(10)}  \\n\"\"\")\n",
+    "                           \n",
+    "            x+=1"
    ]
   }
  ],
