Documenting; changed names of some files and variables

--- a/macemodel.ipynb
+++ b/macemodel.ipynb
@@ -18,7 +18,8 @@
     "\n",
     "from matplotlib          import rcParams\n",
     "rcParams.update({'figure.dpi': 200})\n",
-    "mpl.rcParams.update({'font.size': 8})def makeOutputDir(path):\n",
+    "mpl.rcParams.update({'font.size': 8})\n",
+    "def makeOutputDir(path):\n",
     "    if not os.path.exists(path):\n",
     "        os.mkdir(path)\n",
     "    return path\n",
