--- a/train2.0_dev.ipynb
+++ b/train2.0_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,8 @@
     "\n",
     "import src.mace.CSE_0D.dataset          as ds\n",
     "import src.mace.CSE_0D.intregr_train    as tr\n",
-    "import latentODE                        as lODE\n",
-    "import mace\n",
+    "import src.mace.latentODE               as lODE\n",
+    "import src.mace.mace                    as mace\n",
     "from src.mace.CSE_0D.loss               import Loss\n",
     "import src.mace.CSE_0D.loss             as loss\n",
     "import src.mace.CSE_0D.plotting         as pl\n",
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
